// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches product form snapshot 1`] = `
<div
  className="col col-sm-12 col-md-4 col-lg-4"
>
  <div
    className="card"
  >
    <div
      className="card-header"
      style={null}
    >
      <h3
        className="card-title"
      >
        edit product
      </h3>
    </div>
    <div
      className="card-body"
    >
      <div
        className="form-group"
      >
        <label
          className="form-label"
        >
          Product Name
        </label>
        <input
          className="form-control"
          name="prodName"
          onChange={[Function]}
          placeholder="Enter product name"
          type="text"
          value="Product Name"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
        >
          Price
        </label>
        <input
          className="form-control"
          name="prodPrice"
          onChange={[Function]}
          placeholder="Enter product latest price"
          type="text"
          value="Price"
        />
      </div>
      <button
        className="btn btn-primary"
      >
        save
      </button>
    </div>
  </div>
</div>
`;

exports[`matches product form snapshot: add product 1`] = `
<div
  className="col col-sm-12 col-md-4 col-lg-4"
>
  <div
    className="card"
  >
    <div
      className="card-header"
      style={null}
    >
      <h3
        className="card-title"
      >
        add product
      </h3>
    </div>
    <div
      className="card-body"
    >
      <div
        className="form-group"
      >
        <label
          className="form-label"
        >
          Product Name
        </label>
        <input
          className="form-control"
          name="prodName"
          onChange={[Function]}
          placeholder="Enter product name"
          type="text"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
        >
          Price
        </label>
        <input
          className="form-control"
          name="prodPrice"
          onChange={[Function]}
          placeholder="Enter product latest price"
          type="text"
        />
      </div>
      <button
        className="btn btn-primary"
      >
        submit
      </button>
    </div>
  </div>
</div>
`;
